--- a/localisation/english/PB_More_Mapmodes_l_english.yml
+++ b/localisation/english/PB_More_Mapmodes_l_english.yml
@@ -3,78 +3,78 @@
   ##########################
   # LOC
   ##########################
-  MAPMODE_CIVILIZATION_MAP_MODE_NAME:0 "Civilization" 
-  MAPMODE_CIVILIZATION_MAP_MODE:0 "§YCivilization Progress map mode§!"
-  MAPMODE_CIVILIZATION_MAP_MODE_DESCRIPTION:0 "Displays the progress towards §Yenlightened civilization§! across all four corners of the globe."
+  MAPMODE_CIVILIZATION_MAP_MODE_NAME: "Civilization" 
+  MAPMODE_CIVILIZATION_MAP_MODE: "§YCivilization Progress map mode§!"
+  MAPMODE_CIVILIZATION_MAP_MODE_DESCRIPTION: "Displays the progress towards §Yenlightened civilization§! across all four corners of the globe."
 
-  MAPMODE_MILITARY_MAP_MODE_NAME:0 "Military" 
-  MAPMODE_MILITARY_MAP_MODE:0 "§YMilitary Progress map mode§!"
-  MAPMODE_MILITARY_MAP_MODE_DESCRIPTION:0 "Displays the progress towards a §Ymodern military§!."
+  MAPMODE_MILITARY_MAP_MODE_NAME: "Military" 
+  MAPMODE_MILITARY_MAP_MODE: "§YMilitary Progress map mode§!"
+  MAPMODE_MILITARY_MAP_MODE_DESCRIPTION: "Displays the progress towards a §Ymodern military§!."
 
-  MAPMODE_CULTURE_MAP_MODE_NAME:0 "Culture" 
-  MAPMODE_CULTURE_MAP_MODE:0 "§YCulture map mode§!"
-  MAPMODE_CULTURE_MAP_MODE_DESCRIPTION:0 "Displays the selected state's §Ymajority culture§!."
+  MAPMODE_CULTURE_MAP_MODE_NAME: "Culture" 
+  MAPMODE_CULTURE_MAP_MODE: "§YCulture map mode§!"
+  MAPMODE_CULTURE_MAP_MODE_DESCRIPTION: "Displays the selected state's §Ymajority culture§!."
 
-  MAPMODE_SPHERE_MAP_MODE_NAME:0 "Spheres" 
-  MAPMODE_SPHERE_MAP_MODE:0 "§YSpheres of Influence§!"
-  MAPMODE_SPHERE_MAP_MODE_DESCRIPTION:0 "Displays the selected country's §YSpheres of Influence§!."
+  MAPMODE_SPHERE_MAP_MODE_NAME: "Spheres" 
+  MAPMODE_SPHERE_MAP_MODE: "§YSpheres of Influence§!"
+  MAPMODE_SPHERE_MAP_MODE_DESCRIPTION: "Displays the selected country's §YSpheres of Influence§!."
 
-  MAPMODE_CONTENT_MAP_MODE_NAME:0 "Content Map" 
-  MAPMODE_CONTENT_MAP_MODE:0 "§YContent Map§!"
-  MAPMODE_CONTENT_MAP_MODE_DESCRIPTION:0 "Displays a map of countries with §Ycurrently planned§! content."
+  MAPMODE_CONTENT_MAP_MODE_NAME: "Content Map" 
+  MAPMODE_CONTENT_MAP_MODE: "§YContent Map§!"
+  MAPMODE_CONTENT_MAP_MODE_DESCRIPTION: "Displays a map of countries with §Ycurrently planned§! content."
   
-  sphere_map_mode_tooltip:0 "[From.Controller.get_sphere_data]"
-  sphere_map_mode_tooltip_delayed:0 ""
-  PB_Sphere_MM_British:0 "[From.Controller.GetNameWithFlag] is within the §rBritish§! sphere of influence"
-  PB_Sphere_MM_American:0 "[From.Controller.GetNameWithFlag] is within the §CAmerican§! sphere of influence"
-  PB_Sphere_MM_German:0 "[From.Controller.GetNameWithFlag] is within the §YGerman§! sphere of influence"
-  PB_Sphere_MM_French:0 "[From.Controller.GetNameWithFlag] is within the §BFrench§! sphere of influence"
-  PB_Sphere_MM_Russian:0 "[From.Controller.GetNameWithFlag] is within the §GRussian§! sphere of influence"
-  PB_Sphere_MM_Japanese:0 "[From.Controller.GetNameWithFlag] is within the §RJapanese§! sphere of influence"
+  sphere_map_mode_tooltip: "[From.Controller.get_sphere_data]"
+  sphere_map_mode_tooltip_delayed: ""
+  PB_Sphere_MM_British: "[From.Controller.GetNameWithFlag] is within the §rBritish§! sphere of influence"
+  PB_Sphere_MM_American: "[From.Controller.GetNameWithFlag] is within the §CAmerican§! sphere of influence"
+  PB_Sphere_MM_German: "[From.Controller.GetNameWithFlag] is within the §YGerman§! sphere of influence"
+  PB_Sphere_MM_French: "[From.Controller.GetNameWithFlag] is within the §BFrench§! sphere of influence"
+  PB_Sphere_MM_Russian: "[From.Controller.GetNameWithFlag] is within the §GRussian§! sphere of influence"
+  PB_Sphere_MM_Japanese: "[From.Controller.GetNameWithFlag] is within the §RJapanese§! sphere of influence"
 
-  content_map_mode_tooltip:0 "[From.Controller.get_content_data]"
-  content_map_mode_tooltip_delayed:0 ""
-  PB_content_country_tt:0 "[From.Controller.GetNameWithFlag] currently has §Gfully playable§! content."
-  PB_americaupdate_content_country_tt:0 "[From.Controller.GetNameWithFlag] will receive content in the §OAmerican Update§!"
-  PB_russiaupdate_content_country_tt:0 "[From.Controller.GetNameWithFlag] will receive content in the §7Russian Update§!"
-  PB_asiaupdate_content_country_tt:0 "[From.Controller.GetNameWithFlag] will receive content in the §RAsia Update§!"
-  PB_latinupdate_content_country_tt:0 "[From.Controller.GetNameWithFlag] will receive content in the §PLatin Update§!"
-  PB_balkanupdate_content_country_tt:0 "[From.Controller.GetNameWithFlag] will receive content in the §4Balkan Update§!"
+  content_map_mode_tooltip: "[From.Controller.get_content_data]"
+  content_map_mode_tooltip_delayed: ""
+  PB_content_country_tt: "[From.Controller.GetNameWithFlag] currently has §Gfully playable§! content."
+  PB_americaupdate_content_country_tt: "[From.Controller.GetNameWithFlag] will receive content in the §OAmerican Update§!"
+  PB_russiaupdate_content_country_tt: "[From.Controller.GetNameWithFlag] will receive content in the §7Russian Update§!"
+  PB_asiaupdate_content_country_tt: "[From.Controller.GetNameWithFlag] will receive content in the §RAsia Update§!"
+  PB_latinupdate_content_country_tt: "[From.Controller.GetNameWithFlag] will receive content in the §PLatin Update§!"
+  PB_balkanupdate_content_country_tt: "[From.Controller.GetNameWithFlag] will receive content in the §4Balkan Update§!"
 
-  megacorp_map_mode:0 "[From.Controller.get_megacorp_data]"
+  megacorp_map_mode: "[From.Controller.get_megacorp_data]"
 
-  civilization_map_mode_tooltip:0 "[From.Controller.get_civilization_level]"
-  civilization_map_mode_tooltip_delayed:0 ""
-  get_uncivilized_nation:0 "[From.Controller.GetNameWithFlag] is considered §RUncivilized§!."
-  get_partially_westernized:0 "[From.Controller.GetNameWithFlag] is considered §YPartially Westernized§!."
-  get_fully_westernized:0 "[From.Controller.GetNameWithFlag] is considered §GFully Westernized§!."
-  get_missing_civilization:0 "[From.Controller.GetNameWithFlag] is missing §gA Civilization Level§!."
+  civilization_map_mode_tooltip: "[From.Controller.get_civilization_level]"
+  civilization_map_mode_tooltip_delayed: ""
+  get_uncivilized_nation: "[From.Controller.GetNameWithFlag] is considered §RUncivilized§!."
+  get_partially_westernized: "[From.Controller.GetNameWithFlag] is considered §YPartially Westernized§!."
+  get_fully_westernized: "[From.Controller.GetNameWithFlag] is considered §GFully Westernized§!."
+  get_missing_civilization: "[From.Controller.GetNameWithFlag] is missing §gA Civilization Level§!."
 
-  military_map_mode_tooltip:0 "[From.Controller.get_military_level]"
-  military_map_mode_tooltip_delayed:0 ""
-  get_pre_great_war_nation:0 "[From.Controller.GetNameWithFlag] has a §RPre-Great War Military§!."
-  get_great_war_nation:0 "[From.Controller.GetNameWithFlag] has a §YGreat War Military§!."
-  get_semi_modern_nation:0 "[From.Controller.GetNameWithFlag] has a §GSemi-Modern Military§!."
-  get_fully_modern_nation:0 "[From.Controller.GetNameWithFlag] has a §GFully-Modern Military§!."
-  get_missing_military:0 "[From.Controller.GetNameWithFlag] is missing §gA Military Progress Level§!."
+  military_map_mode_tooltip: "[From.Controller.get_military_level]"
+  military_map_mode_tooltip_delayed: ""
+  get_pre_great_war_nation: "[From.Controller.GetNameWithFlag] has a §RPre-Great War Military§!."
+  get_great_war_nation: "[From.Controller.GetNameWithFlag] has a §YGreat War Military§!."
+  get_semi_modern_nation: "[From.Controller.GetNameWithFlag] has a §GSemi-Modern Military§!."
+  get_fully_modern_nation: "[From.Controller.GetNameWithFlag] has a §GFully-Modern Military§!."
+  get_missing_military: "[From.Controller.GetNameWithFlag] is missing §gA Military Progress Level§!."
 
   ### CORES MAPMODE ###
-   MAPMODE_CORES_MAP_MODE: "§Y$MAPMODE_CORES_CLAIMS_MAP_MODE_NAME$§! map mode"
-   MAPMODE_CORES_MAP_MODE_NAME: "Cores and Claims"
-   MAPMODE_CORES_MAP_MODE_DESCRIPTION: "Shows current cores and claims of the country."
-   
-   cores_map_mode_tooltip: "§Y[FROM.GetName]§! ([FROM.Owner.GetFlag] [FROM.Owner.GetName])"
-   cores_map_mode_tooltip_delayed: "[FROM.GetCoresMapmodeText]"
-   
-   cores_mapmode_core_owned_tt: "§Y[FROM.GetName]§! is a §YOwned Core State§! of §Y[ROOT.GetNameWithFlag]§!."
-   cores_mapmode_core_not_owned_tt: "§Y[FROM.GetName]§! is a §YNot Owned Core State§! of §Y[ROOT.GetNameWithFlag]§!."
-   #cores_claims_map_mode_tooltip_potential_core_50: "§Y[FROM.GetName]§! is a §Ypotential core state§! of §Y[ROOT.GetNameWithFlag]§!. #If    owned, it will become a core upon reaching §Y50%§! compliance."
-   #cores_claims_map_mode_tooltip_potential_core_80: "§Y[FROM.GetName]§! is a §Ypotential core state§! of §Y[ROOT.GetNameWithFlag]§!. #If    owned, it will become a core upon reaching §Y80%§! compliance."
-   cores_mapmode_claim_owned_tt: "§Y[FROM.GetName]§! is §YClaimed and Owned§! by §Y[ROOT.GetNameWithFlag]§!."
-   cores_mapmode_claim_not_owned_tt: "§Y[FROM.GetName]§! is §YClaimed but not Owned§! by §Y[ROOT.GetNameWithFlag]§!."
-   cores_mapmode_only_owned_tt: "§Y[FROM.GetName]§! is §YOccupied§! by §Y[ROOT.GetNameWithFlag]§!."
-   cores_mapmode_priority_zone_tt: "§Y[FROM.GetName]§! is §YPriority Zone§! within borders of §Y[ROOT.GetNameWithFlag]§!.\n\n§YPriority Zones§! are states that has important value during §YAnnexations Mechanic§! or §YPeace Deals§!"
-   cores_mapmode_priority_zone_not_owned_tt: "§Y[FROM.GetName]§! is §Y[ROOT.GetAdjective] Priority Zone§! outside of §Y[ROOT.GetNameWithFlag]§!.\n\n§YPriority Zones§! are states that has important value during §YAnnexations Mechanic§! or §YPeace Deals§!"
+  MAPMODE_CORES_MAP_MODE: "§Y$MAPMODE_CORES_MAP_MODE_NAME$§! map mode"
+  MAPMODE_CORES_MAP_MODE_NAME: "§YCores and Claims§!"
+  MAPMODE_CORES_MAP_MODE_DESCRIPTION: "Shows current cores and claims of the country."
+  
+  cores_map_mode_tooltip: "§Y[FROM.GetName]§! ([FROM.Owner.GetFlag] [FROM.Owner.GetName])"
+  cores_map_mode_tooltip_delayed: "[FROM.GetCoresMapmodeText]"
+  
+  cores_mapmode_core_owned_tt: "§Y[FROM.GetName]§! is a §YOwned Core State§! of §Y[ROOT.GetNameWithFlag]§!."
+  cores_mapmode_core_not_owned_tt: "§Y[FROM.GetName]§! is a §YNot Owned Core State§! of §Y[ROOT.GetNameWithFlag]§!."
+  #cores_claims_map_mode_tooltip_potential_core_50: "§Y[FROM.GetName]§! is a §Ypotential core state§! of §Y[ROOT.GetNameWithFlag]§!.#If    owned, it will become a core upon reaching §Y50%§! compliance."
+  #cores_claims_map_mode_tooltip_potential_core_80: "§Y[FROM.GetName]§! is a §Ypotential core state§! of §Y[ROOT.GetNameWithFlag]§!.#If    owned, it will become a core upon reaching §Y80%§! compliance."
+  cores_mapmode_claim_owned_tt: "§Y[FROM.GetName]§! is §YClaimed and Owned§! by §Y[ROOT.GetNameWithFlag]§!."
+  cores_mapmode_claim_not_owned_tt: "§Y[FROM.GetName]§! is §YClaimed but not Owned§! by §Y[ROOT.GetNameWithFlag]§!."
+  cores_mapmode_only_owned_tt: "§Y[FROM.GetName]§! is §YOccupied§! by §Y[ROOT.GetNameWithFlag]§!."
+  cores_mapmode_priority_zone_tt: "§Y[FROM.GetName]§! is §YPriority Zone§! within borders of §Y[ROOT.GetNameWithFlag]§!.\n\n§YPriorityZones§! are states that has important value during §YAnnexations Mechanic§! or §YPeace Deals§!"
+  cores_mapmode_priority_zone_not_owned_tt: "§Y[FROM.GetName]§! is §Y[ROOT.GetAdjective] Priority Zone§! outside of §Y[ROOTGetNameWithFlag]§!.\n\n§YPriority Zones§! are states that has important value during §YAnnexations Mechanic§! or §YPeace Deals§!"
 
 
 
