swiss mercenary things

--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -43,7 +43,6 @@
  anti_air_building_desc:0 "This building provides the state with protection from enemy bombers and ability to fire at attacking aircraft."
  synthetic_refinery:0 "Synthetic Refinery"
  synthetic_refinery_plural:0 "Synthetic Refineries"
- #synthetic_refinery_desc:0 "This building provides the state with +1 £resources_strip|3 and +2 £resources_strip|1."
  synthetic_refinery_desc:0 "This building provides the state with"
  synthetic_refinery_amount:0 "$VALUE|Y0=$"
  synthetic_refinery_resource:0 "£resources_strip|$FRAME$"
@@ -92,7 +91,7 @@
  medical_center_desc:0 "This building improves the medical situation of the surrounding state, requiring some weekly manpower for upkeep but decreasing the experience units lose upon taking damage"
  research_center:0 "Research Campus"
  research_center_plural:0 "Research Campuses"
- research_center_desc:0 "This building improves the scientific situation of the surrounding state, requiring some weekly manpower for staffing and upkeep and providing a small research bonus"
+ research_center_desc:0 "This building improves the scientific situation of the surrounding state, requiring some weekly manpower for staffing and upkeep and providing §Y$MODIFIER_RESEARCH_SPEED_FACTOR$:§! §G+0.5%§!"
  colonial_outpost:0 "Colonial Outpost"
  colonial_outpost_desc:0 "This building helps to recruit local forces for our cause, requiring some weekly manpower for staffing and upkeep but increasing local non core manpower."
  steel_mill:0 "Synthetic Mineral Fabricator"
