--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -158,3 +158,12 @@ PB_SWI_catholic_act_desc: ""
 
 PB_SWI_implement_constitution: "Implement the Constitution"
 PB_SWI_implement_constitution_desc: ""
+
+##########################
+# VOLUNTEER RULES
+##########################
+
+SWI_VOLUNTEERS_NOT_INTEREST_TT: "§RSwitzerland does not send mercenaries to countries where it has no interest.§!"
+SWI_VOLUNTEERS_WAR_WITH_INTEREST_TT: "§RThis country is at war with the country we are supporting.§!"
+
+THIS_will_receive_swiss_support_tt: "[THIS.GetName] will receive Swiss support"
