more strategic regions

--- a/localisation/english/PB_buildings_l_english.yml
+++ b/localisation/english/PB_buildings_l_english.yml
@@ -104,8 +104,8 @@
  fuel_silo_plural:0 "Fuel Silos"
  fuel_silo_desc:0 "This building provides your nation with more room for stockpiling §HFuel§!."
 
-### LANDMARKS ###
-# please keep the same order as in PB_landmarks.txt
+  ### LANDMARKS ### 
+  # please keep the same order as in PB_landmarks.txt
 
  landmark_big_ben_pax: "Big Ben"
  landmark_big_ben_pax_plural: "$landmark_big_ben_pax$"
@@ -139,9 +139,9 @@
  landmark_winter_palace_plural: "$landmark_winter_palace$"
  landmark_winter_palace_desc: " "
 
- landmark_hagia_sophia: "Hagia Sophia"
- landmark_hagia_sophia_plural: "$landmark_hagia_sophia$"
- landmark_hagia_sophia_desc: " "
+ landmark_hagia_sophia_pax: "Hagia Sophia"
+ landmark_hagia_sophia_pax_plural: "$landmark_hagia_sophia$"
+ landmark_hagia_sophia_pax_desc: " "
 
  landmark_statue_of_columbia: "Statue of Columbia"
  landmark_statue_of_columbia_plural: "$landmark_statue_of_columbia$"
@@ -158,5 +158,25 @@
  landmark_krakatoa_geothermal_plant_ruins: "Krakatoa Geothermal Plant Ruins"
  landmark_krakatoa_geothermal_plant_ruins_plural: "$landmark_krakatoa_geothermal_plant_ruins$"
  landmark_krakatoa_geothermal_plant_ruins_desc: " "
+
+ landmark_krakatoa_geothermal_plant: "Krakatoa Geothermal Plant"
+ landmark_krakatoa_geothermal_plant_plural: "$landmark_krakatoa_geothermal_plant$"
+ landmark_krakatoa_geothermal_plant_desc: " "
+
+ landmark_taj_mahal_pax: "Taj Mahal"
+ landmark_taj_mahal_pax_plural: "$landmark_taj_mahal_pax$"
+ landmark_taj_mahal_pax_desc: " "
+
+ landmark_pyramids: "Pyramids"
+ landmark_pyramids_plural: "$landmark_pyramids$"
+ landmark_pyramids_desc: " "
+
+ landmark_chichen_itza: "Chichen Itza"
+ landmark_chichen_itza_plural: "$landmark_chichen_itza$"
+ landmark_chichen_itza_desc: " "
+
+ landmark_machu_picchu: "Machu Picchu"
+ landmark_machu_picchu_plural: "$landmark_machu_picchu$"
+ landmark_machu_picchu_desc: " "
 
 
