--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -47,7 +47,7 @@
  STRATEGICREGION_46:0 "Barents Sea"
  STRATEGICREGION_47:1 "Iberian Coast"
  STRATEGICREGION_48:0 "African Coast"
- STRATEGICREGION_49:0 "North Atlantic Ridge"
+ STRATEGICREGION_49:0 "North-Atlantic Ridge"
  STRATEGICREGION_50:0 "Labrador Sea"
  STRATEGICREGION_51:0 "Mid Atlantic gap"
  STRATEGICREGION_52:0 "Gulf of Mexico"
@@ -58,21 +58,21 @@
  STRATEGICREGION_57:0 "Sargasso Sea"
  STRATEGICREGION_58:0 "Central Atlantic Gap"
  STRATEGICREGION_59:0 "Demerara Abyssal Plain"
- STRATEGICREGION_60:0 "West Indian Ocean"
+ STRATEGICREGION_60:0 "North Indian Ridge"
  STRATEGICREGION_61:0 "Cap Verde Plain"
  STRATEGICREGION_62:0 "Gulf Of Guinea"
  STRATEGICREGION_63:0 "Argentine Coast"
  STRATEGICREGION_64:0 "Argentine Basin"
  STRATEGICREGION_65:0 "Cape of Africa"
- STRATEGICREGION_66:0 "South Central Atlantic"
- STRATEGICREGION_67:0 "Southern Mid-Atlantic Ridge"
+ STRATEGICREGION_66:0 "Northern Central-Atlantic Ridge"
+ STRATEGICREGION_67:0 "South-Atlantic Ridge"
  STRATEGICREGION_68:0 "Western Mediterranean Sea"
  STRATEGICREGION_69:0 "Eastern Mediterranean Sea"
  STRATEGICREGION_70:0 "Caspian Lake"
- STRATEGICREGION_71:0 "East Indian Ocean"
+ STRATEGICREGION_71:0 "North Indian Basin"
  STRATEGICREGION_72:0 "Straits of Malacca"
  STRATEGICREGION_73:0 "Gulf of Thailand"
- STRATEGICREGION_74:0 "South East Indian Ocean"
+ STRATEGICREGION_74:0 "South Indian Basin"
  STRATEGICREGION_75:0 "South China Sea"
  STRATEGICREGION_76:0 "East China Sea"
  STRATEGICREGION_77:0 "Yellow Sea"
@@ -83,7 +83,7 @@
  STRATEGICREGION_82:0 "Gulf of Carpentaria"
  STRATEGICREGION_83:0 "Solomon Sea"
  STRATEGICREGION_84:0 "Bismarck Sea"
- STRATEGICREGION_85:0 "South West Indian Ocean"
+ STRATEGICREGION_85:0 "South Indian Ridge"
  STRATEGICREGION_86:0 "Tasman Sea"
  STRATEGICREGION_87:0 "Sea of Okhotsk"
  STRATEGICREGION_88:0 "Bering Sea"
@@ -96,11 +96,11 @@
  STRATEGICREGION_95:0 "West Emperor Chain"
  STRATEGICREGION_96:0 "North Emperor Chain"
  STRATEGICREGION_97:0 "Eastern Micronesia"
- STRATEGICREGION_98:0 "Great Australian Bight"
+ STRATEGICREGION_98:0 "Great Sahulian Bight"
  STRATEGICREGION_99:0 "Far Eastern Indian Ocean"
  STRATEGICREGION_100:0 "Red Sea"
  STRATEGICREGION_101:0 "Bay of Bengal"
- STRATEGICREGION_102:0 "East African Coast"
+ STRATEGICREGION_102:0 "Somali Sea"
  STRATEGICREGION_103:0 "Mozambique Channel"
  STRATEGICREGION_104:0 "Arabian Sea"
  STRATEGICREGION_105:1 "Hawaii Ridge"
@@ -111,7 +111,7 @@
  STRATEGICREGION_110:0 "East Pacific Rise"
  STRATEGICREGION_111:0 "North Central Pacific"
  STRATEGICREGION_112:0 "Far South Pacific"
- STRATEGICREGION_113:0 "South Central Pacific"
+ STRATEGICREGION_113:0 "East Polynesia"
  STRATEGICREGION_114:0 "North Pacific"
  STRATEGICREGION_115:0 "North East Pacific"
  STRATEGICREGION_116:1 "Central Iranian Range"
@@ -154,7 +154,7 @@
  STRATEGICREGION_153:0 "Northern India"
  STRATEGICREGION_154:0 "Southern Japan"
  STRATEGICREGION_155:1 "Western Manchuria"
- STRATEGICREGION_156:1 "Southern Australia"
+ STRATEGICREGION_156:1 "Southwestern Sahulia"
  STRATEGICREGION_157:0 "New Zealand"
  STRATEGICREGION_158:0 "Java"
  STRATEGICREGION_159:0 "Borneo"
@@ -172,12 +172,12 @@
  STRATEGICREGION_171:0 "Northwest Coast"
  STRATEGICREGION_172:0 "Pacific Line Ridge"
  STRATEGICREGION_173:0 "Eastern North Sea"
- STRATEGICREGION_174:0 "Norwegian Coast"
+ STRATEGICREGION_174:0 "South Norwegian Fjords"
  STRATEGICREGION_175:0 "Central Pacific"
  STRATEGICREGION_176:0 "Central North Pacific"
  STRATEGICREGION_177:0 "Western North Pacific"
  STRATEGICREGION_178:0 "West Polynesia"
- STRATEGICREGION_179:0 "French Polynesia"
+ STRATEGICREGION_179:0 "Central Polynesia"
  STRATEGICREGION_180:0 "Micronesian Gap"
  STRATEGICREGION_181:0 "Madagascar"
  STRATEGICREGION_182:1 "Western Maghreb"
@@ -191,9 +191,9 @@
  STRATEGICREGION_190:1 "Pakistan"
  STRATEGICREGION_191:0 "Northern Norway"
  STRATEGICREGION_192:1 "Lower Norrland"
- STRATEGICREGION_193:2 "Northern Australia"
- STRATEGICREGION_194:0 "Eastern Australia"
- STRATEGICREGION_195:0 "Central Australia"
+ STRATEGICREGION_193:2 "Northwestern Sahulia"
+ STRATEGICREGION_194:0 "Diamantina"
+ STRATEGICREGION_195:0 "Great Orange Desert"
  STRATEGICREGION_196:2 "Central Arabia"
  STRATEGICREGION_197:0 "New England"
  STRATEGICREGION_198:1 "Steel Belt"
@@ -351,4 +351,26 @@
  STRATEGICREGION_349:0 "Skagerrak"
  STRATEGICREGION_350:0 "White Sea"
  STRATEGICREGION_351:0 "Guinea Basin"
- STRATEGICREGION_352:0 "Brazilian Abyssal Plain"
+ STRATEGICREGION_352:0 "Pernambuco Abyssal Plain"
+ STRATEGICREGION_353:0 "Bahia Abyssal Plain"
+ STRATEGICREGION_354:0 "Santos Basin"
+ STRATEGICREGION_355:0 "Argentine Abyssal Plain"
+ STRATEGICREGION_356:0 "Southern Central-Atlantic Ridge"
+ STRATEGICREGION_357:0 "Brazilian Basin"
+ STRATEGICREGION_358:0 "Rio Grande Rise"
+ STRATEGICREGION_359:0 "Angola Basin"
+ STRATEGICREGION_360:0 "Gulf of Aden"
+ STRATEGICREGION_361:0 "Laccadive Sea"
+ STRATEGICREGION_362:0 "Mascarene Basin"
+ STRATEGICREGION_363:0 "Carlsberg Rise"
+ STRATEGICREGION_364:0 "Agulhas Sea"
+ STRATEGICREGION_365:0 "Andaman Sea"
+ STRATEGICREGION_366:0 "Cocos Basin"
+ STRATEGICREGION_367:0 "Wharton Basin"
+ STRATEGICREGION_368:0 "Carnarvon Basin"
+ STRATEGICREGION_369:0 "Madagascar Basin"
+ STRATEGICREGION_370:0 "Chatham Sea"
+ STRATEGICREGION_371:0 "North Norwegian Fjords"
+ STRATEGICREGION_372:0 "Western Sahulia"
+ STRATEGICREGION_373:0 "Northeastern Sahulia"
+ STRATEGICREGION_374:0 "Southeastern Sahulia"
