small character changes

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -5088,3 +5088,7 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   DGG_AD_condominium: "Anglo-Dutch Doggerland"
   DGG_AD_condominium_DEF: "the Anglo-Dutch Condominium of the Doggerland"
   DGG_AD_condominium_ADJ: "Doggerlander"
+
+  JKM_sikh_reforged: "Reforged Realm of Sikh"
+  JKM_sikh_reforged_DEF: "the Reforged Realm of Sikh"
+  JKM_sikh_reforged_ADJ: "Sikh"
