Free Finnish standardization & stuff

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1453,7 +1453,9 @@
   TRS_ds_party_long:0 "Military Administrationn of the Russian Caucasus"
   TRS_ni_party:0 "Moscow Circle - Caucasian Wing"
   TRS_ni_party_long:0 "Caucasian Wing of the Moscow Circle"
-
+  
+  FFI_ds_party:0 "Malmberg Junta"
+  
   GLG_jc_party:0 "-"
   GLG_jc_party_long:0 "-"
   GLG_ss_party:0 "-"
