--- a/localisation/english/PB_country_specific/PB_Vietnam_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Vietnam_l_english.yml
@@ -10,9 +10,12 @@
   VIN_phan_boi_chau: "Phan Boi Chau"
   VIN_cuong_de: "Cuong De"
   VIN_bao_dai: "Bao Dai"
+  VIN_jean_decoux: "Jean Decoux"
+  VIN_nguyen_an_ninh: "Nguyen An Ninh"
   
   ##########################
   # IDEAS
   ##########################
   
   PB_Idea_VIN_Rebellion:0 "Under Phan Boi Chau's wise guidance, we have launched a full-scale operation seeking to destroy what remains of European imperialism in Indochina. London can only seethe as large swaths of Tonkin's population and comrades from neighboring lands have all rallied under our banner. Although this popular coalition is as large as it is politically diverse — with monarchists, nationalists and revolutionaries finding themselves next to each other, their shared disdain toward London and its Siamese lapdog is enough for them to cast aside their rivalries for the time being. \n\nWhile our struggle may appear like one of David against Goliath, the general apathy toward Britannia's feeble rule and commitment from our Asian brethren has opened a window of opportunity like never before. \n\nThe French fell against our spirit of resistance, and so shall the British experience the same fate."
+  
