Finnish decision fixes

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -476,6 +476,7 @@
 #148 - LAPPI
  VICTORY_POINTS_6045: "Kuusamo"
  VICTORY_POINTS_3026: "Pudasjärvi"
+ VICTORY_POINTS_11164: "Kemi"
 #149 - POHJANMAA
  VICTORY_POINTS_195: "Brahestad"
  VICTORY_POINTS_3172: "Jakobstad"
