--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -374,3 +374,11 @@
  STRATEGICREGION_372:0 "Western Sahulia"
  STRATEGICREGION_373:0 "Northeastern Sahulia"
  STRATEGICREGION_374:0 "Southeastern Sahulia"
+ STRATEGICREGION_375:0 "South Afghanistan"
+ STRATEGICREGION_376:0 "Bengal"
+ STRATEGICREGION_377:0 "Baluchistan"
+ STRATEGICREGION_378:0 "Shan"
+ STRATEGICREGION_379:0 "Tenasserim"
+ STRATEGICREGION_380:0 "Mandalay"
+ STRATEGICREGION_381:0 "Gujarat"
+ STRATEGICREGION_382:0 "Lut Desert"
