Haiti/Empire of Ayiti news events & minor tweaks

--- a/localisation/english/PB_country_specific/PB_Haiti_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Haiti_l_english.yml
@@ -8,6 +8,7 @@
   HAI_rolsavo_bobo: "Toussaint III"
   HAI_jacques_roumain: "Jacques Roumain"
   HAI_vilbrun_guillaume_sam: "Vilbrun Guillaume Sam"
+  HAI_vilbrun_guillaume_sam_coronation: "Guillaume I"
   
   ##########################
   # Traits/Leader_Desc/Nation_Desc/Super_Event_Shit
