--- a/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
@@ -2207,7 +2207,7 @@ PB_AME_The_Shelling_Solution_tt:0 "The §HSuppress Militias§! Decisions Cost wi
 PB_AME_Meet_with_Bonus_Leaders_tt:0 "The Long-Term effects of Regional Instability will be §GReduced§!"
 
 AME_PB_AME_Gradual_Bonus_Rollout_tt:0 "If all Regional Stability is §GVery Stable§! the Bonus Brigade will cost:"
-AME_PB_AME_Gradual_Bonus_Rollout_2_tt:0 "\nIf all Regional Stability is §GStable§! the Bonus Brigade will cost:"
+AME_PB_AME_Gradual_Bonus_Rollout_2_tt:0 "\nIf all Regional Stability is §Gat least stable§! the Bonus Brigade will cost:"
 AME_PB_AME_Gradual_Bonus_Rollout_3_tt:0 "\nIf none of the §HOther Conditions§! are met the Bonus Brigade will cost:"
 AME_PB_AME_Gradual_Bonus_Rollout_4_tt:0 "\nYou currently meet the §HConditions§! for the following Bonus Brigade cost:"
 
