even more fixes

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -30,9 +30,9 @@
   Halloween_Content_2023_Easy_Difficulty:0 "Easy Difficulty | No Buffs"
   Halloween_Content_2023_Normal_Difficulty:0 "Normal Difficulty | Some Buffs"
   Halloween_Content_2023_High_Difficulty:0 "High Difficulty | Major Buffs"
-  Halloween_Content_2023_Easy_Difficulty_desc:0 "The Martian Invasion will spawn with no buffs."
-  Halloween_Content_2023_High_Difficulty_DESC:0 "The Martian Invasion will spawn with significant buffs."
-  Halloween_Content_2023_Normal_Difficulty_DESC:0 "The Martian Invasion will spawn with some limited buffs."
+  Halloween_Content_2023_Easy_Difficulty_desc:0 "The Martian Invasion will spawn with no buffs.\n\n§YPlayer will have significant buffs§!."
+  Halloween_Content_2023_Normal_Difficulty_DESC:0 "The Martian Invasion will spawn with some limited buffs.\n\n§YPlayer will have limited buffs§!."
+  Halloween_Content_2023_High_Difficulty_DESC:0 "The Martian Invasion will spawn with significant buffs.\n\n§YPlayer will have no buffs§!."
 
   RULE_OPTION_ENG_SOCIALIST_PATH:0 "A Workers Union Victory"
   RULE_OPTION_ENG_SOCIALIST_PATH_DESC:0 "Britain will reform into a socialist paradise."
