even more fixes

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -26,13 +26,13 @@
   RULE_OPTION_2023_Halloween_Enabled_DESC: "The Martian Invasion will occur in November of 1933."
 
 
-  PB_2023_Halloween_Difficulty: "Select Halloween Event Difficulty"
-  Halloween_Content_2023_Easy_Difficulty: "Easy Difficulty | No Buffs"
-  Halloween_Content_2023_Normal_Difficulty: "Normal Difficulty | Some Buffs"
-  Halloween_Content_2023_High_Difficulty: "High Difficulty | Major Buffs"
-  Halloween_Content_2023_Easy_Difficulty_desc: "The Martian Invasion will spawn with no buffs."
-  Halloween_Content_2023_High_Difficulty_DESC: "The Martian Invasion will spawn with significant buffs."
-  Halloween_Content_2023_Normal_Difficulty_DESC: "The Martian Invasion will spawn with some limited buffs."
+  PB_2023_Halloween_Difficulty:0 "Select Halloween Event Difficulty"
+  Halloween_Content_2023_Easy_Difficulty:0 "Easy Difficulty | No Buffs"
+  Halloween_Content_2023_Normal_Difficulty:0 "Normal Difficulty | Some Buffs"
+  Halloween_Content_2023_High_Difficulty:0 "High Difficulty | Major Buffs"
+  Halloween_Content_2023_Easy_Difficulty_desc:0 "The Martian Invasion will spawn with no buffs.\n\n§YPlayer will have significant buffs§!."
+  Halloween_Content_2023_Normal_Difficulty_DESC:0 "The Martian Invasion will spawn with some limited buffs.\n\n§YPlayer will have limited buffs§!."
+  Halloween_Content_2023_High_Difficulty_DESC:0 "The Martian Invasion will spawn with significant buffs.\n\n§YPlayer will have no buffs§!."
 
   RULE_OPTION_ENG_SOCIALIST_PATH: "A Workers Union Victory"
   RULE_OPTION_ENG_SOCIALIST_PATH_DESC: "Britain will reform into a socialist paradise."
