--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -98,7 +98,11 @@
   FE_PB_NEXT_UPDATE: "The Next Update will feature §YPeace Deals Rework§!, §YVarious Gameplay Improvements (i.a. more flexibility)§! and §YMap Expansion and Overhaul§!"
 
   POLL: "Next Pax Patch/Update Poll - Community Input"
-  DISCORD: "Pax Britannica Discord"
+  PAX_DISCORD: "Pax Britannica Discord"
+  PAX_REDDIT: "Pax Britannica Reddit"
+
+  patchnotes_tt: "§HWhat's New in Patch 1.3.2:§!\n\n"
+  patchnotes_tt_delayed: "§OAdditions & Changes§!\n- Tweaked rewards related to special projects and facilities for France, Germany and Prussia\n- Changed logic of Alien buffs for §YMartian Invasion§!\n\n§OBugfixes§!\n- Fixed French and German focus trees crash for non MtG/NSB users\n- §YGuided Rockets§! will no longer crash the game upon selection in rocket sites\n- King of Prussia will now swap his trait correctly\n- Russian elections outcome will no longer be randomized\n- §YRussian elections outcome§! will no longer be randomized\n- Fixed issue related to §YSiberian Plan§! triggers as well as §YFirst 5 years plan§! for Russia\n- Minor Bonus Brigade stability check fix\n- §YMemel Convention refusal§! event will now properly fire for Prussia\n- UCA can finally §YManifest its Destiny§!\n- §YMartian Invasion§! will now fire properly upon selectin gamerule\n - §YRasputin§! will no longer §Rhaunt you from his grave§! (this time for real)\n- §YInventor War§! event chain added\n- And much more small bugfixes"
 
   nudger_tt: "§R\"All hope abandon, ye who enter here.\"§!\n §Y- Dante Alighieri, The Divine Comedy§!"
   #MtG
@@ -117,3 +121,5 @@
   DLC_DESCRIPTION_dlc040: "This is a §GContent Pack§! that don't include new features"
  #GDR
   DLC_DESCRIPTION_dlc043: "Included features:\n - §YSpecial Projects§!\n - Military Raids\n - New types of buildings"
+ #GoE
+  DLC_DESCRIPTION_dlc046: "This is a §GContent Pack§! that don't include new features"
