--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -104,8 +104,8 @@
   PAX_DISCORD: "Pax Britannica Discord"
   PAX_REDDIT: "Pax Britannica Reddit"
 
-  patchnotes_tt: "§HWhat's New in Patch 1.3.2:§!\n\n"
-  patchnotes_tt_delayed: "§OAdditions & Changes§!\n- Tweaked rewards related to special projects and facilities for France, Germany and Prussia\n- Changed logic of Alien buffs for §YMartian Invasion§!\n\n§OBugfixes§!\n- Fixed French and German focus trees crash for non MtG/NSB users\n- §YGuided Rockets§! will no longer crash the game upon selection in rocket sites\n- King of Prussia will now swap his trait correctly\n- Russian elections outcome will no longer be randomized\n- §YRussian elections outcome§! will no longer be randomized\n- Fixed issue related to §YSiberian Plan§! triggers as well as §YFirst 5 years plan§! for Russia\n- Minor Bonus Brigade stability check fix\n- §YMemel Convention refusal§! event will now properly fire for Prussia\n- UCA can finally §YManifest its Destiny§!\n- §YMartian Invasion§! will now fire properly upon selectin gamerule\n - §YRasputin§! will no longer §Rhaunt you from his grave§! (this time for real)\n- §YInventor War§! event chain added\n- And much more small bugfixes"
+  patchnotes_tt: "§HWhat's New in Patch 1.4:§!\n\n"
+  patchnotes_tt_delayed: "§OTBA§!"
 
   nudger_tt: "§R\"All hope abandon, ye who enter here.\"§!\n §Y- Dante Alighieri, The Divine Comedy§!"
   #MtG
