Another Swedish national spirit
kanye

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -981,8 +981,8 @@
   SWE_lb_party_long:0 "Bondeförbundet"
   SWE_cn_party:0 "AV"
   SWE_cn_party_long:0 "Allmänna Valmansförbundet"
-  SWE_ss_party:0 "SEP"
-  SWE_ss_party_long:0 "Sveriges Egalitariska Parti"
+  SWE_ss_party:0 "EA"
+  SWE_ss_party_long:0 "Egalitariska Arbetarpartiet"
   SWE_jc_party:0 "SJS"
   SWE_jc_party_long:0 "Svenska Jakobinska Samlingen"
   SWE_rc_party:0 "SNF"
