Minister Traits & stuff
west

--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -14,6 +14,10 @@
 
   PB_Futurist:0 "Futurist"
 
+  PB_Initiative_Lawmaker:0 "Initiative Lawmaker"
+
+  PB_Intelligent_Compromiser:0 "Intelligent Compromiser"
+
   PB_The_Diplomatic_King:0 "The Diplomatic King"
 
   PB_Little_Bolivar:0 "Little Bolívar"
