Sweden stuff & minor Solkusten stuff

--- a/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
@@ -6,7 +6,6 @@
 
   ### LEADERS ###
   SWE_viktoria_i: "Viktoria I"
-  SWE_sven_lindholm: "Sven Olov Lindholm"
 
   ### FIELD MARSHALS ###
   SWE_olof_thornell: "Olof Thörnell"
@@ -27,12 +26,35 @@
   ### CABINET ###
   # HEAD OF GOVERNMENT
   SWE_trygger: "Ernst Trygger"
+  SWE_sven_hedin: "Sven Hedin"
+  SWE_elmo_lindholm: "Elmo Lindholm"
+  SWE_sven_lindholm: "Sven Olov Lindholm"
+  SWE_arvid_lindman: "Arvid Lindman"
+  SWE_carl_lindhagen: "Carl Lindhagen"
+  SWE_axel_pehrsson: "Axel Pehrsson-Bramstorp"
   # ECONOMIC MINISTER
   SWE_dahl: "Adolf Dahl"
+  SWE_engdahl: "Per Engdahl"
+  SWE_john_gustafsson: "John Gustafsson"
+  SWE_nils_flyg: "Nils Flyg"
+  SWE_gosta_bagge: "Gösta Bagge"
+  SWE_ernst_wigforss: "Ernst Wigforss"
+  SWE_vilmar_ljungdahl: "Vilmar Ljungdahl"
   # FOREIGN MINISTER
   SWE_wurtemberg: "Erik Marks von Würtemberg"
+  SWE_rutger_essen: "Rütger Essén"
+  SWE_gosta_jacobsson: "Gösta Jacobsson"
+  SWE_martin_ekstrom: "Martin Ekström"
+  SWE_osten_unden: "Östen Undén"
+  SWE_karl_westman: "Karl Gustaf Westman"
   # INTERIOR MINISTER
   SWE_bissmark: "Georg Bissmark"
+  SWE_barthold_lunden: "Barthold Lundén"
+  SWE_adrian_molin: "Adrian Molin"
+  SWE_sven_hallstrom: "Sven Hallström"
+  SWE_karl_schlyter: "Karl Schlyter"
+  SWE_jarl_hjalmarson: "Jarl Hjalmarson"
+  SWE_gerhard_strindlund: "Gerhard Strindlund"
   
   ##########################
   # Traits/Leader_Desc/Nation_Desc/Super_Event_Shit
