--- a/localisation/english/PB_country_specific/PB_Swedish_Australia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Swedish_Australia_l_english.yml
@@ -7,6 +7,7 @@
   ### LEADERS ###
   SLK_adolph_eberhart: "Adolph Olson Eberhart"
   SLK_floyd_olson: "Floyd B. Olson"
+  SLK_albin_hansson: "Per Albin Hansson"
   
   ### GENERALS ###
   SLK_carl_nathorst: "Carl Evert Nathorst"
