quick edits and such

--- a/localisation/english/PB_Arabia_l_english.yml
+++ b/localisation/english/PB_Arabia_l_english.yml
@@ -48,7 +48,7 @@
   IKW_Tier_1_Formed:0 "Has formed §HWahhabistan§!"
 
   JBS_Emirate_of_Jabal:0 "§HJabal Shammar§! will be known as the §HEmirate of Jabal Shammar and Najd§!"
-  JBS_Rashidi_Arabia:0 "§HWahhabistan§! will be known as §HRashidi Arabia§!"
+  JBS_Rashidi_Arabia:0 "the §HEmirate of Jabal Shammar and Najd§! will be known as §HRashidi Arabia§!"
   JBS_Tier_1_Formed:0 "Has formed the §HEmirate of Jabal Shammar and Najd§!"
 
   NAN_Iron_Emirate:0 "the §HWarriors of the New Arab Nation§! will be known as the §HIron Emirate§!"
